# AUVSoftware

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose.yml  pyproject.toml
Notes/: notes.md
database/pgadmin/: pgadmin4.db
database/pgadmin/sessions/: 0d61e2d3-4c36-4563-980e-57fc8c5a7743  105b512b-8359-4d9c-8f98-204b282221cb  187dd07a-5550-4c00-83b1-ffb31da554d6  19940f88-0300-410e-8241-66dd9cacc9d0  1d313d32-b07c-4cab-8174-4876a6aa0c5d  25463582-1a67-4548-895d-4c6c617f0f6f  26257065-6f31-4c14-be38-3dba582b9e1e  2ebf7e04-fa44-4035-9623-a86f433b70d3  35aee584-02f5-41e3-b6ff-f955e68b0e1a  3defd703-afcd-4400-90ad-a9834d4497e6  3e5841fc-2531-4c9b-b40f-c265e33e0ac0  415f489d-7195-4af8-b902-a2817ec0f60a  4359a875-c69b-499f-87f4-6b3c2112652f  459579b0-960e-4653-b949-c677ad632ec2  45d16676-df60-4e86-be91-e243c34d4a81  45fe623b-3a6c-4f9d-b4d5-b45f0ee96d97  4ce51847-4fe2-49de-8df3-ba814221cb82  4e4ea3a4-e34a-462f-aea0-7a7af0c91b71  4f747dc7-1c04-45ee-b544-2783332dac5e  5314f191-be02-4968-9f9d-dbc78dce05ee  55be6369-ffe6-45ce-b44b-7ea9e8d314fb  5f37906d-6091-4885-9ca7-6fc0ca85f46f  643cdc2f-b965-4a3c-956c-6e24d790cf57  731e4ac6-4bda-4792-b385-5c899d9756ad  7574fa48-ec27-4113-b289-ab10a04e61e1  7ef956f0-454c-41cc-ac1b-0f356bfdfcf4  8f88b9c8-3283-4370-a3fe-435d809b7a63  8ff76abe-9cf6-4258-bcef-5c5328a3451e  9032452a-398c-4bff-993c-655cd6bcc264  93491ddb-249f-44de-9342-21ee80404379  9d969485-af58-426a-acc2-5f10a6a01b60  a49680fb-3083-4be7-98a7-5907bef2d497  b7b8c71d-bafe-4db0-8c05-6d5f9e9733ff  c954513c-72c6-4e14-af5d-40bb34fc9e57  c9f78b6e-e6be-4c69-8c57-da8e657121ff  d07a9b0a-679f-4b44-bfd4-59eacfbeee34  d1c8c70a-cd35-43dc-961d-d5db5d4de5c2  d417b423-95a4-4612-a22c-3bc2352ddf99  d95ec258-fd77-4ffa-862d-d1768c57dd05  daa4b5f2-36a2-4302-a353-9d834e7f39ab  (+2 more)
database/postgres/: postmaster.pid
database/postgres/base/1/: 2619  2696  2840  2841  pg_internal.init
database/postgres/base/16384/: 1247  1249  1259  1259_fsm  16399  16400  16407  16409  16410  16414  16421  16422  16423  16427  16434  16435  16436  16440  16447  16448  16449  16453  16460  16461  16462  16466  16473  16474  16475  16479  16486  16487  16488  16493  16494  16501  16515  16516  16521  16522  (+40 more)
database/postgres/base/4/: 2619
database/postgres/base/5/: pg_internal.init
database/postgres/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
src/auvsoftware/: config.py  controller.py  logging_config.py  main.py  process_manager.py  quick_request.py  ui.py
src/auvsoftware/ai_package/: __init__.py  agent.py  environment.py  reward.py  runner.py
src/auvsoftware/api/: app.py  deps.py  smoke_test.sh
src/auvsoftware/api/routes/: depth.py  imu.py  inputs.py  motor.py  power.py  runs.py  servo.py
src/auvsoftware/camera_package/: camera_manager.py
src/auvsoftware/camera_package/cameras/: usb_camera.py  zed_camera.py
src/auvsoftware/camera_package/detection/: detector.py
src/auvsoftware/camera_package/streaming/: server.py
src/auvsoftware/cli/: main.py
src/auvsoftware/dashboard/: main.py
src/auvsoftware/database/: __init__.py  base.py  config.py  crud.py  engine.py  example_usage.py  health.py  session.py
src/auvsoftware/database/models/: __init__.py  depth.py  imu.py  inputs.py  mixin.py  motor.py  objects.py  power.py  process.py  run.py  servo.py
src/auvsoftware/database/scripts/: init_db.py  run_create.py
src/auvsoftware/db_manager/: config.py  database.py  deps.py  models.py  notes.md  routers.py  run.py  run.sh  smoke_test.sh
src/auvsoftware/hardware/: controller.py  interface.py
src/auvsoftware/hardware/modules/: arm.py  battery.py  depth.py  escs.py  imu.py  temperature.py  torpedoes.py
src/auvsoftware/hardware_interface/: hardware_interface.py  i2c_commands.py  notes.md  process_manager.py  scanner.py  simulation.py
src/auvsoftware/hardware_interface/embedded/just_i2c/src/: main.cpp
src/auvsoftware/hardware_interface/modules/: arm_controller.py  esc_controller.py  imu_controller.py
src/auvsoftware/movement/: main.py  pid.py
src/auvsoftware/movement_package/: mixer.py  movement.py  pid.py
(+3 files in other folders)
