[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auvsoftware"
version = "0.1.0"
description = "Custom Autonomous Underwater Vehicle (AUV) software stack for simulation, hardware control, and data processing."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GNU General Public License v3.0"}
authors = [
    { name = "Michael Lees" }
]

keywords = [
    "auv",
    "robotics",
    "autonomous systems",
    "underwater robotics",
    "reinforcement learning",
    "simulation",
    "control systems"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics"
]

dependencies = [
    "pygame",
    "numpy",
    "pandas",
    "pyyaml",
    "requests",
    "python-dotenv",
    "sqlalchemy",
    "fastapi",
    "uvicorn",
    "click",
    "rich",
    "torch",
    "stable-baselines3",
    "gymnasium",
    "psycopg2-binary",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov"
]

docs = [
    "sphinx",
    "furo"
]

hardware = [
    "pyserial",
    "smbus2",
    "opencv-python"
]

[project.scripts]
auv = "auvsoftware.cli.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]