[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auvsoftware"
version = "0.1.0"
description = "Custom Autonomous Underwater Vehicle (AUV) software stack for simulation, hardware control, and data processing."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "GNU General Public License v3.0"}
authors = [
    { name = "Michael Lees" }
]

keywords = [
    "auv",
    "robotics",
    "autonomous systems",
    "underwater robotics",
    "reinforcement learning",
    "simulation",
    "control systems"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics"
]

dependencies = [
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "argparse==1.4.0",
    "charset-normalizer==3.4.7",
    "exceptiongroup==1.3.0",
    "fastapi==0.116.2",
    "h11==0.16.0",
    "idna==3.10",
    "pydantic==2.13.3",
    "pydantic-core==2.46.3",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "PyYAML==6.0.2",
    "requests==2.33.1",
    "sentry-sdk==2.38.0",
    "smbus2==0.6.1",
    "sniffio==1.3.1",
    "starlette==0.48.0",
    "typing-inspection==0.4.2",
    "typing-extensions==4.15.0",
    "uvicorn==0.35.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov"
]

docs = [
    "sphinx",
    "furo"
]

[project.scripts]
auv = "auvsoftware.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]